@@ -1,3 +1,8 @@
+2006-03-20  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/main.py:
+	Added better handling of reactors.
+
 2006-03-18  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/legacy/icqt.py:
